fix: contact.css --> #contacts-main --> overflow-x: hidden, so that there is no x-bar during the enema

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -11,6 +11,7 @@
     height: calc(100vh - 124px);
     padding: 2rem 2rem 0 2rem;
     margin-left: 22.138rem;
+    overflow-x: hidden;
 }
 
 #left-section {
